<resources>
    <string name="app_name">Math 2 Players</string>
    <string name="lang_text">English</string>
    <string name="create_account">Create account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="password_length_condition">Password must not be less than 6 characters</string>
    <string name="no_internet">No Internet connection</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="tvName">Full Name</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russion">Russian</string>
    <string name="players">Players</string>
    <string name="math_game">Online Math Game</string>
    <string name="play_now">Play Now</string>
    <string name="share">Share App</string>
    <string name="statistics">Statistics</string>
    <string name="choose_your_opponent">Choose your opponent</string>
    <string name="game_time">02:00</string>
    <string name="time">Time:</string>
    <string name="tv_question_status">Question: 5/10</string>
    <string name="result">Result</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="your_score">Your Score: 5/10</string>
    <string name="opponent_score">Opponent Score: 7/10</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="progress">Progress</string>
    <string name="account">Account</string>
    <string name="change_account_name">Change account name</string>
    <string name="support_us">Support us</string>
    <string name="contact_us">Contact us</string>
    <string name="change_image">Change profile image</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="share_app">Share This App</string>
    <string name="two_player_math_game">Two Player Online Math Game</string>
</resources>