<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="@dimen/margin_large_standard"
            android:gravity="center_vertical"
            android:padding="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_profile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:textColor="@color/white"
                android:textSize="20dp"
                tools:ignore="SpUsage"
                tools:text=" Hi Jamshid" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/math" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lilita_one_regular"
            android:gravity="center"
            android:text="@string/math_game"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/play_now"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_main_bg"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UnusedAttribute">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_play"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/lilita_one_regular"
                android:gravity="center"
                android:text="@string/play_now"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/margin_middle"
            android:background="@drawable/btn_main_bg"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UnusedAttribute">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_statistics"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:src="@drawable/statistics"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/lilita_one_regular"
                android:gravity="end"
                android:text="@string/statistics"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_middle"
            android:background="@drawable/btn_main_bg"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UnusedAttribute">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:src="@drawable/ic_settings"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/lilita_one_regular"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_main_bg"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp"
            tools:ignore="UnusedAttribute">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:src="@drawable/ic_share"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/lilita_one_regular"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>